# PromptLang_Compiler_Platform

./: .env.example  .gitignore  FREE_LLM_SETUP.md  GROQ_SETUP.md  MIGRATION_GUIDE.md  README.md  README_GROQ.md  WEBAPP_SETUP.md  ZERO_BUDGET_MODE.md  debug_rag.py  demo_enhanced_rag.py  final_demo.py  pyproject.toml  requirements.txt  requirements.txt.backup  start-groq.sh  start.sh  test_enhanced_rag.py  test_simple.py  test_synthetic.py
docker/: Dockerfile  docker-compose.yml
knowledge/: links.txt
knowledge/chunks/: chunks.jsonl
knowledge/extracted/: bdb72e6e68b80f9e.json
knowledge/index/: faiss.index  meta.json
knowledge/raw/: https_12factor_net__677e752662de.txt  https_airflow_apache_org_docs__d5d9ce455d69.txt  https_argo_cd_readthedocs_io_en_stable__2858fb3c0760.txt  https_aws_amazon_com_architecture__3bef78268aac.txt  https_aws_amazon_com_architecture_well_architected__4ccfdf4c5b17.txt  https_c4model_com__d5168c8f23a4.txt  https_cheatsheetseries_owasp_org__8f9d17ea0991.txt  https_cloud_google_com_apis_design_17805524fe25.txt  https_cloud_google_com_architecture_framework_27fa5a73fa4a.txt  https_cp_algorithms_com__bdfeab9b1905.txt  https_developer_hashicorp_com_terraform_language_42f4993def15.txt  https_developer_hashicorp_com_terraform_tutorials_f22f834f8f95.txt  https_docs_cypress_io_guides_overview_why_cypress_1594ac4f110b.txt  https_docs_docker_com_engine_reference_builder__524e0155fec0.txt  https_docs_docker_com_engine_reference_commandline_cli__3e05777b775e.txt  https_docs_getdbt_com_docs_introduction_535be095a225.txt  https_docs_github_com_en_actions_learn_github_actions_unders_7a585c92357f.txt  https_docs_gitlab_com_ee_ci__b51eab662f3e.txt  (+45 more)
promptlang/: __init__.py
promptlang/api/: main.py
webapp/: package-lock.json  package.json  tailwind.config.js
(+133 files in other folders)
